# RAG

./: .env  main.py  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
0-DataIngestParsing/data/databases/: company.db
0-DataIngestParsing/data/json_files/: company_data.json  events.jsonl
0-DataIngestParsing/data/structured_files/: inventory.xlsx  products.csv
0-DataIngestParsing/data/word_files/: proposal.docx
1-VectorEmbeddingAndDatabases/: embedding.ipynb  openaiembeddings.ipynb
2-Vector Stores/: 1-chromadb.ipynb  doc_2.txt
2-Vector Stores/chromadb/: chroma.sqlite3
2-Vector Stores/data/: doc_0.txt  doc_1.txt
