[project]
name = "ragudemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "chromadb>=1.5.5",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "jq>=1.11.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "matplotlib>=3.10.8",
    "msoffcrypto-tool>=6.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pymupdf>=1.27.2",
    "pypdf>=6.8.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "unstructured[docx]>=0.21.5",
]
